# cc_ocr_date_extract

./: .gitignore  .kedro.yml  README.md  pyproject.toml  setup.cfg
conf/base/: catalog.yml  parameters.yml
docs/source/: conf.py  index.rst
notebooks/: cv_utils.py  eda_ocr_data_extraction_classification.ipynb
src/: setup.py
src/cc_ocr_date_extract/: __init__.py
src/cc_ocr_date_extract/hooks/: hooks.py  model_tracking.py
src/cc_ocr_date_extract/pipelines/etl/: nodes.py  pipeline.py
src/cc_ocr_date_extract/pipelines/ml/: nodes.py  pipeline.py  utils.py
src/cc_ocr_date_extract/pipelines/nlp/: nodes.py  pipeline.py
src/cc_ocr_date_extract/visualizations/: threshold.py
src/tests/: test_run.py
tests/: test_cc_ocr_dachser.py
