[tool.poetry]
name = "cc_ocr_date_extract"
version = "0.1.0"
description = ""
authors = ["Matthias Radtke <matthias.radtke@codecentric.de>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
pytesseract = "^0.3"
opencv-python = "^4.4.0"
kedro = "^0.16.5"
dvc = "^1.8.4"
jupyter = "^1.0.0"
pandas = "^1.1.3"
xlrd = "^1.2.0"
nbstripout = "^0.3.9"
pdf2image = "^1.14.0"
Pillow = "^8.0.0"
numpy = "^1.19.2"
spacy = "^2.3.2"
scikit-learn = "^0.23.2"
kedro-viz = "^3.6.0"
matplotlib = "^3.3.2"
spacy-langdetect = "^0.1.2"
mlflow = "^1.11.0"
de-core-news-md = {url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_md-2.3.0/de_core_news_md-2.3.0.tar.gz#egg=de_core_news_md"}
dateparser = "^0.7.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
